Use staging and staging package

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.1",
-    "react-chromatic": "^0.8.1",
+    "react-chromatic": "hichroma/react-chromatic#staging",
     "react-dom": "^16.3.1"
   },
   "devDependencies": {
@@ -19,14 +19,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "printenv; DEBUG=*,-babel yarn chromatic-prod",
+    "test": "printenv; DEBUG=*,-babel yarn chromatic-staging",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic":
-      "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false  chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
-    "chromatic-staging":
-      "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test -- --storybook-addon --app-code 'mpm7osoy9sa'",
+    "chromatic": "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false  chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
+    "chromatic-staging": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test -- --storybook-addon --app-code 'mpm7osoy9sa'",
     "chromatic-prod": "chromatic test  -- --storybook-addon --app-code '80a9kcb1fim'"
   }
 }
