--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "chromatic": "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false  chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
-    "chromatic-staging": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test --app-code '0a0o37a8n9cm'",
+    "chromatic-staging-private-test-zol-project1": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test --app-code '86odq5v19v5'",
+    "chromatic-staging-public-test-zol-project1": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test --app-code '0fq3hw1ehi3a'",
     "chromatic-prod": "chromatic test  -- --storybook-addon --app-code '80a9kcb1fim'"
   }
 }
