--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "printenv; DEBUG=*,-babel yarn chromatic-staging",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
+    "storybook": "start-storybook -h 0.0.0.0 -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
     "chromatic": "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false  chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
     "chromatic-staging": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test --app-code '0a0o37a8n9cm'",
