--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "storybook-chromatic": "^0.10.0-beta.9"
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "storybook-chromatic": "^1.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.0",
-    "@storybook/addon-links": "^3.4.0",
-    "@storybook/addons": "^3.4.0",
-    "@storybook/react": "^3.4.0",
+    "@storybook/addon-actions": "^4.0.0",
+    "@storybook/addon-links": "^4.0.0",
+    "@storybook/addons": "^4.0.0",
+    "@storybook/react": "^4.0.0",
     "babel-core": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "printenv; DEBUG=*,-babel yarn chromatic-staging",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -h 0.0.0.0 -p 9009 -s public",
+    "storybook": "start-storybook -h 0.0.0.0 -p 9009 -s public --ci",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false  chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
+    "chromatic": "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
     "chromatic-staging": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test --app-code '0a0o37a8n9cm'",
     "chromatic-prod": "chromatic test  -- --storybook-addon --app-code '80a9kcb1fim'"
   }
