--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "storybook-chromatic": "^0.10.0-beta.9"
+    "storybook-chromatic": "^3.0.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.0",
