--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "storybook-chromatic": "^0.10.0-beta.9"
+    "storybook-chromatic": "^3.0.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.0",
@@ -23,8 +23,9 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -h 0.0.0.0 -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false  chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
+    "xxchromatic": "CHROMATIC_INDEX_URL=http://localhost:3007 CHROMATIC_CREATE_TUNNEL=false  chromatic test -- --storybook-addon --app-code 'vzpjvok8iz'",
     "chromatic-staging": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test --app-code '0a0o37a8n9cm'",
+    "chromatic-staging2": "CHROMATIC_INDEX_URL=https://staging-www.chromaticqa.com CHROMATIC_TUNNEL_URL=http://staging-tunnel.chromaticqa.com chromatic test --app-code 'zevmevm2gl'",
     "chromatic-prod": "chromatic test  -- --storybook-addon --app-code '80a9kcb1fim'"
   }
 }
