--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "storybook-chromatic": "^0.10.0-beta.9"
+    "react-dom": "^16.3.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.0",
-    "@storybook/addon-links": "^3.4.0",
-    "@storybook/addons": "^3.4.0",
-    "@storybook/react": "^3.4.0",
-    "babel-core": "^6.26.0",
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/addons": "^6.3.8",
+    "@storybook/react": "^6.3.8",
+    "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
-    "react-scripts": "1.1.4"
+    "chromatic": "5.10.0",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
